Add timeout to getGraphQLExecutionResult